[workspace]
members = [
    "liteapi",
    "stormsql",
    "litepay",
    "litecache",
    "stormsdk",
]

[workspace.package]
rust-version = "1.70.0"
edition = "2021"

[patch.crates-io]
liteapi = { path = "liteapi" }
stormsql = { path = "stormsql" }
litepay = { path = "litepay" }
litecache = { path = "litecache" }
stormsdk = { path = "stormsdk" }

[profile.release]
lto = true
opt-level = "z"
